# social_graph_service/src/routes/api/messages.js
@@ -1,7 +1,11 @@
 const express = require('express');
-const driver = require('../../config/db');
 const router = express.Router();
 const auth = require('../../middleware/auth');
+const { check, validationResult } = require('express-validator');
+const query = require('../../neo4j/queries.js');
+
+// TO DO: Delete
+const driver = require('../../config/db');
 
 router.post('/', auth, async function (req, res) {
   const messageSession = driver.session();
@@ -37,4 +41,35 @@ router.post('/', auth, async function (req, res) {
     .json(result1.records.map((record) => record.get('message').properties)[0]);
 });
 
+// Get my messages
+// Private route
+router.get('/my', auth, async (req, res) => {
+  const user = req.user;
+  try {
+    const message = await query.getMyMessages(user);
+    if (!message) {
+      return res.status(404).send('No message found');
+    } else {
+      return res.status(200).json(message);
+    }
+  } catch (err) {
+    return res.status(500).send('Server Error');
+  }
+});
+
+// Get messages from people I follow
+// Private Route
+router.get('/other', auth, async (req, res) => {
+  const user = req.user;
+  try {
+    const message = await query.getMessagesIFollow(user);
+    if (!message) {
+      return res.status(404).send('No message found');
+    } else {
+      return res.status(200).json(message);
+    }
+  } catch (err) {
+    return res.status(500).send('Server Error');
+  }
+});
 module.exports = router;
